--- a/.gitignore
+++ b/.gitignore
@@ -15,10 +15,15 @@
 *.iws
 .idea/
 
+
 # The .vscode folder contains launch configuration and tasks you configure in
 # VS Code which you may wish to be included in version control, so this line
 # is commented out by default.
-#.vscode/
+.vscode/
+
+android/
+windows/
+ios/
 
 # Flutter/Dart/Pub related
 **/doc/api/
