--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,9 @@ dependencies:
   flutter:
     sdk: flutter
   provider: ^5.0.0
+  image_picker: ^0.8.4+11
+  path_provider: ^2.0.9
+  path: ^1.8.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
