--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   path_provider: ^2.0.9
   path: 1.8.0
   sqflite: ^2.0.2
+  location: ^4.3.0
+  google_maps_flutter: ^2.1.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
