--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,7 @@
 *.iws
 .idea/
 
-
+*key_api.dart
 # The .vscode folder contains launch configuration and tasks you configure in
 # VS Code which you may wish to be included in version control, so this line
 # is commented out by default.
@@ -49,6 +49,3 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
-
-android/app/src/main/AndroidManifest.xml
-ios/Runner/AppDelegate.swift
