--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,9 @@
    <application
         android:label="great_places"
         android:icon="@mipmap/ic_launcher">
+        
+        <meta-data android:name="com.google.android.geo.API_KEY"
+               android:value="AIzaSyDU6KAMFpFjdEHsQO6iI17iKGsAeHpjtJo"/>
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
